# rust-html-xml-comparison

./: Cargo.toml  LICENSE  README.md
examples/high-level/: minidom.rs  roxmltree.rs  xmltree.rs
examples/html/: html-parser.rs  html5ever.rs
examples/low-level/: quick-xml.rs  xml-rs.rs  xmlparser.rs
src/: cli.yaml  data.rs  lib.rs  main.rs  matrix.rs  parser.rs  parser_test.rs  tests.rs  tokenizer.rs  tokenizer_test.rs
